Ajout de l'interface IMessage et simplification de l'utilisation de RibbitMQ.

--- a/RibbitMQ/RibbitMQ.csproj
+++ b/RibbitMQ/RibbitMQ.csproj
@@ -5,6 +5,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <GenerateDocumentationFile>False</GenerateDocumentationFile>
+        <SignAssembly>False</SignAssembly>
+        <AssemblyVersion>1.1</AssemblyVersion>
+        <FileVersion>1.1</FileVersion>
     </PropertyGroup>
 
 </Project>
